feat(mcp,server): wire SpectorRuntime into MCP + REST server
- SpectorMcpMain: uses SpectorRuntime.from() instead of reflection-based engine builder
- SpectorMcpServer: accepts SpectorRuntime, conditionally registers 7 memory tools
- SpectorServer: accepts SpectorRuntime, memory field for future REST endpoints
- 13 total MCP tools when memory.enabled: true (6 search + 7 cognitive memory)